Pre-Festival update

--- a/bees.html
+++ b/bees.html
@@ -11,13 +11,12 @@
 <div class="bar"></div>
 
 <a href="index.html">
-<font id="logo" class="logo highlight" face="Arial Black"> Willowbrook Honey </font>
+<img class="logo" src="media/wbhLogo.png">
 </a>
 
 <span class="nav_bar" style="display:inline-block;">
 	<a class="nav_button highlight" href="honey.html"> Honey </a>
 	<a class="nav_button highlight" href="bees.html"> Bees </a>
-	<a class="nav_button highlight" href="learn.html"> Learn </a>
 </span>
 
 <div class="content" align="left">
@@ -25,8 +24,20 @@
 <div class="header"> <u> Bee Services </u> </div>
 
 <div style="color:#dede02;max-width:100%;width:800px;margin-left:10px;padding-bottom:30px;padding-left:30px;">
-Information Information Information Information Information Information Information Information Information
-Information Information Information Information Information Information Information Information Information
+<b><u>Indiana Queens</b></u> and Bees are available for sale.
+<br>
+Young hives in 5-frame nuc boxes <b>$150</b>
+<br>
+10-frame deep hive with 5-frames of bees and queen -  <b>$200</b>
+<br><br>
+<b><u>Pollination Services</b></u> are available.
+<br>
+Currently partnering with Ditzler’s Orchard and Fresh on Cypress Blackberry Farm
+<br><br>
+<b><u>Newbee Mentoring Program</b></u> services are available.
+<br>
+18 months of instructional and consultation services are provided to new beekeepers.  -  <b>$100</b>
+
 </div>
 
 </div>
