--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
 <link rel="stylesheet" type="text/css" href="slides.css">
 
 <body>
-
 <div class="combs"></div>
 <div class="bar"></div>
 
 <a href="index.html">
-<font id="logo" class="logo highlight" face="Arial Black"> Willowbrook Honey </font>
+<img class="logo" src="media/wbhLogo.png">
 </a>
 
 <span class="nav_bar" style="display:inline-block;">
 	<a class="nav_button highlight" href="honey.html"> Honey </a>
 	<a class="nav_button highlight" href="bees.html"> Bees </a>
-	<a class="nav_button highlight" href="learn.html"> Learn </a>
 </span>
 
 <div class="content" align="center">
@@ -46,6 +44,12 @@ Willowbrook Honey
 is a local family beekeeping business in Terre Haute, Indiana owned and operated by brothers Eric and Mark Ellis.
 They have been selling honey for 7 years and appeared at the 2019 Berry Bash.
 If you are interested in ordering please visit the Honey page.
+<br> <br>
+Willowbrook Honey will be setting up shop at these great local festivals for 2019:
+<span style="color:#75dbeb;">
+<br> Berry Bash - June 29 <br> <img src="media/home/berryBashEvent.png" style="width:300px;">
+<br> Apple Fest - September 28 <br> <img src="media/home/appleFestEvent.png" style="width:300px;">
+</span>
 <br> <br>
 Contact: <br>
 (812) 240-4257 <br>
