--- a/learn.html
+++ b/learn.html
@@ -10,7 +10,7 @@
 <div class="bar"></div>
 
 <a href="index.html">
-<font id="logo" class="logo highlight" face="Arial Black"> Willowbrook Honey </font>
+<img class="logo" src="media/wbhLogo.png">
 </a>
 
 <span class="nav_bar" style="display:inline-block;">
