Slight Dad changes

--- a/index.html
+++ b/index.html
@@ -42,18 +42,18 @@
 Willowbrook Honey
 <span style="color:#dede02;">
 is a local family beekeeping business in Terre Haute, Indiana owned and operated by brothers Eric and Mark Ellis.
-They have been selling honey for 7 years and appeared at the 2019 Berry Bash.
+They have been selling honey for 8 years. Follow us on Instagram @willowbrookhoney2012 
 If you are interested in ordering please visit the Honey page.
 <br> <br>
-Willowbrook Honey will be setting up shop at these great local festivals for 2019:
+Willowbrook Honey will be setting up shop at these great local festivals for 2020:
 <span style="color:#75dbeb;">
-<br> Berry Bash - June 29 <br> <img src="media/home/berryBashEvent.png" style="width:300px;">
-<br> Apple Fest - September 28 <br> <img src="media/home/appleFestEvent.png" style="width:300px;">
+<br> Berry Bash - July 11th <br> <img src="media/home/berryBashEvent.jpg" style="width:300px;">
+<br> Apple Fest - September 26th <br> <img src="media/home/appleFestEvent.jpg" style="width:300px;">
 </span>
 <br> <br>
 Contact: <br>
 (812) 240-4257 <br>
-ericleslie4@gmail.com
+lovewillowbrookhoney@gmail.com
 </span>
 </div>
 </div>
