Price & Home Changes

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<img class="mySlides fade" src="media/home/bees.jpg">
 	<img class="mySlides fade" src="media/home/berryBash.jpg">
 	<img class="mySlides fade" src="media/home/sunset.jpg">
+	<img class="mySlides fade" src="media/home/news.png">
 	<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 	<a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div>
@@ -49,8 +50,18 @@ Willowbrook Honey will be setting up shop at these great local festivals for 202
 <span style="color:#75dbeb;">
 <br> Berry Bash - July 11th <br> <img src="media/home/berryBashEvent.jpg" style="width:300px;">
 <br>
+</span>
+<a href="https://www.facebook.com/events/covington-indiana/30th-annual-covington-apple-fest-2020/486654488927909/">
+<span style="color:#75dbeb;">
 <br> Apple Fest - September 26th <br> <img src="media/home/appleFestEvent.jpg" style="width:300px;">
 </span>
+</a>
+<br>
+<a href="https://www.mywabashvalley.com/news/honeybee-population-in-u-s-doing-better-after-tough-summer-in-2019/">
+<span style="color:#75dbeb;">
+    <br><b><u> WTWO Covers Willow Brook Honey </u></b> <br> <img src="media/home/wtwo.png" style="width:300px;">
+</span>
+</a>
 <br> <br>
 Contact: <br>
 <span style="color:#ffbf00;">
