--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<title> Willowbrook Honey (test) </title>
+<title> Willowbrook Honey </title>
 
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" type="text/css" href="slides.css">
